--- a/client/css/style.css
+++ b/client/css/style.css
@@ -259,7 +259,7 @@ hr {
 
 .home-section {
     padding-top: 110px;
-    padding-bottom: 110px;
+    padding-bottom: 0px;
 	display:block;
     position:relative;
     z-index:120;
@@ -773,6 +773,7 @@ Parallax
 
 @media (max-width:480px) {
 
+
 	.navbar-custom .nav.navbar-nav {
     background-color: rgba(255,255,255,.4);
 	}
@@ -796,3 +797,24 @@ Parallax
 	}
 	
 }
+
+
+/*About section*/
+  .demoVideo{
+    display: block;
+    margin: 0 auto;
+    width: 75%;
+  }
+
+  .aboutText{
+    color: #aaaaaa;
+    padding-top:20px;
+    text-align:center;
+    font-size: 25px; 
+  }
+
+  .downloadLink{
+    text-align:center; 
+    padding-top: 50px;
+    font-size: 30px;    
+  }
